syntax = "proto3";

// -- Services
service TaskService {
    rpc FindAll (Empty) returns (TaskList) {}
    rpc InsertOne (Task) returns (Task) {}
    rpc FindOne(TaskRequest) returns (Task) {}
}

// -- Messages
message Empty {}

message Task {
    required int32 id = 1;
    required string title = 2;
}

message TaskList {
    repeated Task tasks = 1;
}

message TaskRequest {
    required int32 id = 1;
}
